--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,6 @@ env:
 
 before_script:
   - bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
-  - apt install -y php-ldap slapd
+  - sudo apt-get install -y php-ldap slapd
 
 script: phpunit
