--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,6 @@ branches:
     - master
 
 php:
-  - 5.3
-  - 5.4
-  - 5.5
   - 5.6
   - 7.0
   - 7.1
@@ -22,7 +19,12 @@ env:
   - WP_VERSION=latest WP_MULTISITE=1
 
 before_script:
+  - echo 'extension = ldap.so' >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
   - bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
-  - sudo apt-get install -y php-ldap slapd
+
+addons:
+  apt:
+    packages:
+      - slapd
 
 script: phpunit
